test/chainsaw/securityconfig/maskinporten/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: security-config-maskinporten-f542b998
  labels:
    accesserator.kartverket.no/controller: securityconfig
    app.kubernetes.io/managed-by: accesserator
spec:
  exportTo:
    - .
  hosts:
    - test.maskinporten.no
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
